:art: Fix missing padding for Container and Nav

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -122,7 +122,7 @@ table td:not(:first-of-type) {
 }
 
 .container {
-  @apply w-full mx-auto max-w-screen-lg-gutter;
+  @apply w-full px-4 mx-auto max-w-screen-lg-gutter;
 }
 
 .divider {
